--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <h1 class=" title-1 header__title">
                             Айболит круглосуточная ветклиника
                         </h1> 
-                        <h2 id="title-2" class="">
+                        <h2 id="title-2" class="none">
                             Комфортные оборудованные стационары
                         </h2> 
                         <h2 class="title-3 none">
